<resources>
    <string name="app_name">My Recipies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_text_hint">Enter your recipe title</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="description_recipe_hint_text">Enter your recipe detalis here...</string>
    <string name="text_button_done">Done</string>
    <string name="title_images">Images</string>
    <string name="text_view_header_content">Content</string>
    <string name="text_view_header_title">Title</string>
</resources>