<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.myrecipies.framework.AddRecipeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.AddRecipeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditViewTitle"
            android:text="@string/recipe_title"
            android:layout_marginTop="@dimen/margin_x12"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_text_recipe"
            android:layout_width="0dp"
            android:background="@drawable/view_border"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x1"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            android:padding="@dimen/margin_x2"
            android:hint="@string/recipe_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_recipe" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recipe_description"
            style="@style/EditViewTitle"
            android:layout_marginTop="@dimen/margin_x12"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_recipe" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_description_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/view_border"
            android:layout_marginTop="@dimen/margin_x1"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            android:padding="@dimen/margin_x2"
            android:lines="5"
            android:gravity="top"
            android:hint="@string/description_recipe_hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_recipe" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditViewTitle"
            android:text="@string/title_images"
            android:layout_marginTop="@dimen/margin_x8"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description_recipe"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/upload_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/view_border"
            android:layout_marginTop="@dimen/margin_x8"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            android:src="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_images"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_x8"
            android:layout_marginEnd="@dimen/margin_x8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/upload_image"
            app:layout_constraintTop_toTopOf="@id/upload_image"
            tools:listitem="@layout/layout_photo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>